force-app/main/default/objects/conference360__Event_Content__c/conference360__Event_Content__c.object-meta.xml
<CustomObject>
    <description>Provide links to Content for an Event. The Name field should contain the name of the Content.</description>
    <label>Event Content</label>
    <nameField>
        <label>Content Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Event Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>