force-app/main/default/objects/conference360__Event_Content__c/fields/conference360__Event__c.field-meta.xml
<CustomField>
    <fullName>conference360__Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The Event this Content is available for.</inlineHelpText>
    <label>Event</label>
    <referenceTo>conference360__Event__c</referenceTo>
    <relationshipLabel>Event Content</relationshipLabel>
    <relationshipName>Event_Content</relationshipName>
    <type>Lookup</type>
</CustomField>