force-app/main/default/objects/conference360__Event_Content__c/fields/conference360__Type__c.field-meta.xml
<CustomField>
    <fullName>conference360__Type__c</fullName>
    <description>deprecated.</description>
    <inlineHelpText>deprecated</inlineHelpText>
    <label>Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>