force-app/main/default/objects/conference360__Event_Content__c/listViews/conference360__All.listView-meta.xml
<ListView>
    <fullName>conference360__All</fullName>
    <columns>NAME</columns>
    <columns>conference360__Event__c</columns>
    <columns>conference360__Type2__c</columns>
    <columns>conference360__URL__c</columns>
    <columns>conference360__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>